--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -182,7 +182,7 @@
             const errorMsg = document.getElementById('errorMsg');
             
             // 简单的代码验证（实际项目中应该调用后端API）
-            if (accessCode === 'upload123' || accessCode === 'admin') {
+            if (accessCode === 'lay@9527') {
                 // 验证成功，设置登录标记并跳转到上传页面
                 localStorage.setItem('fileupload_authenticated', 'true');
                 localStorage.setItem('fileupload_auth_time', Date.now().toString());
